[package]
name = "rustypass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustypass-derive = { path = "../rustypass-derive" }
tui = "0.19.0"
crossterm = "0.25"

# Cryprography
digest = "0.10.3"

## Hashing
sha2 = "0.10.2"
sha3 = "0.10.2"
whirlpool = "0.10.1"

## Key-derivation
argon2 = { version = "0.4.1", features = ["password-hash", "alloc"] }

# Macro utilites
paste = "1.0.8"
