[package]
name = "rustypass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustypass-derive = { path = "../rustypass-derive" }
tui = "0.19.0"
crossterm = "0.25"
generic-array = "0.14.6"
rand = { version = "0.8.5", features = ["getrandom"] }
once_cell = "1.13.1"

# Cryprography
digest = "0.10.3"
aead = "0.5.1"

## Hashing
sha2 = "0.10.2"
sha3 = "0.10.2"
whirlpool = "0.10.1"

## Encryption
aes-gcm-siv = "0.11.1"
chacha20poly1305 = "0.10.1"

## Key-derivation
argon2 = { version = "0.4.1", features = ["password-hash", "alloc"] }

# Macro utilites
paste = "1.0.8"
linkme = "0.3.3"

# Storage

## Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
postcard = { version = "1.0.2", features = ["alloc"] }

## Compression
snap = "1.0.5"

# CLI
clap = "3.2.18"
